Web Inspector: Search bar is too narrow in some localizations https://bugs.webkit.org/show_bug.cgi?id=189060 <rdar://problem/43006369>
Reviewed by Brian Burg.

* UserInterface/Views/Toolbar.css:
(.toolbar .search-bar):


Canonical link: https://commits.webkit.org/204101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235447 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/Toolbar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Toolbar.css
@@ -118,7 +118,7 @@ body[dir=rtl] .toolbar .control-section {
 
 .toolbar .search-bar {
     width: 100%;
-    min-width: 100px;
+    min-width: 125px;
 }
 
 .toolbar .search-bar > input[type="search"] {
